--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -56,4 +56,5 @@ $trMid                   : .5s;
 // gradients
 
 $purpleGr                : linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$purpleGr-hover          : linear-gradient(180deg, #BC9CFF 0%, #BC9CFF 100%);
 $greenGr                 : linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
