--- a/src/assets/scss/modules/date-picker.scss
+++ b/src/assets/scss/modules/date-picker.scss
@@ -494,12 +494,12 @@
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  // border-bottom: 1px solid #efefef;
   min-height: 32px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 30px;
+  border: none;
 }
 
 .-only-timepicker- .datepicker--nav {
@@ -581,7 +581,7 @@
 
 .datepicker--buttons {
   display: flex;
-  padding-top: 30px;
+  padding-top: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 20px;
@@ -658,7 +658,7 @@
    ------------------------------------------------- */
 
 .datepicker--time {
-  border-top: 1px solid #efefef;
+  border: none;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
