--- a/src/pug/includes/modules/checkbox.pug
+++ b/src/pug/includes/modules/checkbox.pug
@@ -1,7 +1,7 @@
 mixin checkbox(title,className,uldrop, ...subtitle)
 	.checkbox-wrapper(class=className)
 		.checkbox-wrapper__head
-			span.title-element #{title}
+			span.title-element.title-element_margin-b #{title}
 			svg.expand-more.icon-dropdown
 				use(xlink:href="#expand_more")
 		ul.checkbox-wrapper__ul(class=uldrop)
