--- a/src/pug/includes/modules/input.pug
+++ b/src/pug/includes/modules/input.pug
@@ -1,7 +1,6 @@
-mixin input(title, wrappClass, type, placeholder, className, name, classNameForIcon, xlink, boolean)
-	label(for=inputWrapper).title-element #{title}
-		br
-		span.input-wrapper(class=wrappClass)
-			input.input-wrapper__input(type=type placeholder=placeholder class=className name=name readonly=boolean)
-			svg(class=classNameForIcon)
-				use(xlink:href=xlink)
+mixin input(idInput,wrappClass, type, placeholder, className, name, classNameForIcon, xlink, boolean)
+		.input-container
+			span.input-wrapper(class=wrappClass)
+				input.input-wrapper__input(id=idInput type=type placeholder=placeholder class=className name=name readonly=boolean)
+				svg(class=classNameForIcon)
+					use(xlink:href=xlink)
