--- a/src/assets/scss/modules/bad-value.scss
+++ b/src/assets/scss/modules/bad-value.scss
@@ -1,6 +1,6 @@
 .bad-value {
 	display: block;
-	font-size: $smallFontSize;
+	font-size: rem(12);
 	color: $danger-color;
 	text-transform: none;
 	font-weight: normal;
