--- a/src/assets/scss/modules/expand_more.scss
+++ b/src/assets/scss/modules/expand_more.scss
@@ -1,6 +1,6 @@
 .expand-more{
-	width: 13px;
-	height: 13px;
+	width: rem(13);
+	height: rem(13);
 	transition: $trFast;
 	align-self: center;
 	fill: $ds50;
