--- a/src/assets/scss/modules/radio.scss
+++ b/src/assets/scss/modules/radio.scss
@@ -3,7 +3,7 @@
   display: inline-flex;
   position: relative;
   cursor: pointer;
-  font-size: $secondFontSize;
+  font-size: rem(14);
   color: $ds50;
   margin-right: 20px;
   margin-top: 16.6px;
