--- a/src/assets/scss/modules/range.scss
+++ b/src/assets/scss/modules/range.scss
@@ -6,7 +6,7 @@
 		position: absolute;
 		right: 0;
 		top: -17px;
-		font-size: $smallFontSize;
+		font-size: rem(12);
 	}
 	i {
 		font-style: normal;
