--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -3,15 +3,14 @@
 // Size
 $mainFontColor           : #101010;
 $mainFontSize            : 18px;
-$secondFontSize          : 14px;
-$bigFontSize						 : 24px;
-$middleFontSize					 : 19px;
-$smallFontSize					 : 12px;
 $normal					         : 400;
 $bold						         : 700;
 $mainLineHeight          : 1.4;
 
-$desktopWidth            : 1280px;
+// media size
+
+
+$desktopWidth            : 1440px;
 $smDesktopWidth          : 980px;
 $tableWidth              : 768px;
 $phoneWidth              : 480px;
@@ -21,7 +20,7 @@ $smPhoneWidth            : 320px;
 // $default-color           : #ffffff;
 // $primary-color           : #444ce0;
 // $success-color           : #26de81;
-$danger-color            : #fc5c65;
+$danger-color            		: #fc5c65;
 // $warning-color           : #fed330;
 // $light-color             : #999999;
 // $purple-color            : #8854d0;
