--- a/src/assets/scss/modules/arrow-forward.scss
+++ b/src/assets/scss/modules/arrow-forward.scss
@@ -1,6 +1,6 @@
 .arrow-forward {
-	width: 20px;
-	height: 20px;
+	width: rem(20);
+	height: rem(20);
 	align-self: center;
 	fill: $purple;
 	&_white {
