--- a/src/assets/scss/modules/toggle.scss
+++ b/src/assets/scss/modules/toggle.scss
@@ -25,7 +25,7 @@
     text-transform: uppercase;
     @include MontBold;
     display: inline-block;
-    font-size: $smallFontSize;
+    font-size: rem(12);
   }
   &__label {
     display: inline-flex;
@@ -81,7 +81,7 @@
   &__li {
     margin-bottom: 10px;
     color: $ds50;
-    font-size: $secondFontSize;
+    font-size: rem(14);
     margin-bottom: 10px;
     &:last-child{
       margin-bottom: 0;
