--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -80,9 +80,26 @@ block content
 						.pagination-container
 							.pagination 
 							span.pagination-text 1 – 12 из 100+ вариантов аренды
-
-
-						
+						br
+						span.title-element.title-element_margin-b bullet list
+						+list("list_bullet",
+						["Нельзя с питомцами",
+						"Без вечеринок и мероприятий",
+						"Время прибытия - после 13:00, а выезд до 12:00"]
+						)
+				.last
+						.advantages
+							+advantage("#insert_emoticon","Комфорт","Шумопоглощающие стены")
+							+advantage("#location_city","Удобство","Окно в каждой из спален")
+						.review
+							.review__head
+								img(src="assets/img/murad.png" alt="hotel-owner").review__img 
+								+like-dislike()
+							.review__content
+								span.review__name Мурад Сарафанов
+									br
+								span.review__date 5 дней назад
+								p.review__text Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
 
 
 
