review and fix dropdown, buttons, like-button, checkbox

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -149,6 +149,7 @@ section, .section {
 }
 
 // Modules
+@import "modules/ui-kit";
 @import "modules/title-element";
 @import "modules/input-wrapper";
 @import "modules/iqdropdown";
