--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -13,12 +13,12 @@ html(lang='en')
   body(class=pageClass)
     .wrapper
       #app
-        include ../includes/modules/header
+        //- include ../includes/modules/header
         .content-wrapper
           block content
           
 
         #icons-svg
-        include ../includes/modules/footer
+        //- include ../includes/modules/footer
 
     block script
