--- a/src/pug/includes/modules/dropdown-guests.pug
+++ b/src/pug/includes/modules/dropdown-guests.pug
@@ -15,5 +15,5 @@ mixin dropdown-guests(title,className)
 				div
 					p.iqdropdown-item Младенцы 
 			.buttons-actions
-				button.buttons-actions__clean-off Отчистить
-				button.buttons-actions__apply Применить
+				button.buttons-actions__clean-off.button.button_no-bg.button_no-bg-grey  Отчистить
+				button.buttons-actions__apply.button.button_no-bg Применить
