--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -69,7 +69,7 @@ block content
 						br
 						br
 						button.button.button_no-bg.button_margin-r click me
-						button.button.button_no-bg.button_no-bg-disable click me
+						button.button.button_no-bg.button_no-bg-grey click me
 						br
 						br
 						button.button.button_big перейти к оплате
