--- a/src/assets/scss/modules/like-button.scss
+++ b/src/assets/scss/modules/like-button.scss
@@ -10,6 +10,7 @@
 	border-radius: 10px;
 	position: relative;
 	transition: $trFast;
+	user-select: none;
 	&:after {
 		content: "";
 		position: absolute;
