card page realize v.1

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -54,7 +54,7 @@ block content
 						span.title-element rate button
 						+rate()
 						br 
-						span.title-element rich checkbox button
+						span.title-element.title-element_margin-b rich checkbox button
 						+checkbox-2("Expandable checkbox list","checkbox-wrapper_w266 checkbox-wrapper_second","","Широкий коридор","Ширина коридоров в номере не менее 91 см.","Помощник для инвалидов","На 1 этаже вас встретит специалист  и проводит до номера.") 
 					.col 
 						span.title-element range slider
