--- a/src/assets/scss/modules/input-wrapper.scss
+++ b/src/assets/scss/modules/input-wrapper.scss
@@ -28,7 +28,7 @@
 	}
 	&__input {
 		width: 100%;
-		padding: rem(12) rem(15);
+		padding: 12px 15px;
 		&_date-picker {
 			color: transparent;
 			text-shadow: 0 0 0 $ds75;
