cards-page is completed

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -170,4 +170,13 @@ section, .section {
 @import "modules/list";
 @import "modules/advantage";
 @import "modules/review";
+@import "modules/cards-page";
+@import "modules/card";
+@import "modules/title";
+@import "modules/wrap-element";
+@import "modules/room";
+@import "modules/total-price";
+@import "modules/form";
+@import "modules/card-room";
+@import "modules/swiper";
 
