--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -47,6 +47,10 @@ $green                   : #6FCF97;
 $bodyColor							 : #E5E5E5;
 $white                   : #ffffff;
 
+// box-shadow
+
+$bs-2										 : 0px 0px 25px rgba(0, 0, 0, 0.2);;
+
 // transition 
 
 $trFast                  : .25s;
