--- a/src/pug/includes/modules/radio-button.pug
+++ b/src/pug/includes/modules/radio-button.pug
@@ -1,6 +1,5 @@
-mixin radio-button(title) 
+mixin radio-button() 
 	.radio-wrapper
-		.title-element #{title}
 		label.radio
 			input(type="radio" name="radio")
 			span.radio__checkmark
