--- a/src/assets/scss/modules/title-element.scss
+++ b/src/assets/scss/modules/title-element.scss
@@ -3,11 +3,11 @@
 	text-transform: uppercase;
 	@include MontBold;
 	font-size: rem(12);
-	margin-bottom: 3px;
+	margin-bottom: 5px;
 	&_margin-1 {
 
 	}
 	&_margin-b {
-		margin-bottom: 16.6px;
+		margin-bottom: rem(16);
 	}
 }
