--- a/src/assets/scss/utils/button.scss
+++ b/src/assets/scss/utils/button.scss
@@ -30,49 +30,36 @@
 	&_white {
 		display: inline-flex;
 		align-items: center;
-		padding: 13px 18px;
 		justify-content: space-between;
 		cursor: pointer;
-		background: #fff;
+		background: $purple;
 		position: relative;
+		z-index: 1;
 		transition: $trFast;
 		color: $purple;
 		margin: 2px;
+		border: none;
 		&:after {
 			content: "";
 			position: absolute;
-			left: -2px;
-			display: block;
-			width: calc(100% +4px);
-			height: calc(100% +4px);
+			left: 2px;
+			right: 2px;
+			bottom: 2px;
+			top: 2px;
 			z-index: -1;
 			border-radius: 22px;
-			background: $purple;
+			background: $white;
 			transition: $trFast;
 		}
 	}
 	&_white-disable {
-		opacity: 1;
-		&:after {
-			opacity: .5;
-		}
-		&:hover {
-			color: $purple;
-			background: $white;
-		}
+		opacity: .5;
 	}
 	&_no-bg {
 		background: none;
 		padding: 0;
 		border-radius: 0;
 		color: $purple;
-	}
-	&_no-bg {
-		color: $purple;
-		&:hover {
-			color: $purple;
-			background: none;
-		}
 	}
 	&_no-bg-grey {
 		color: $ds50;
