--- a/src/assets/scss/modules/radio.scss
+++ b/src/assets/scss/modules/radio.scss
@@ -1,6 +1,7 @@
 .radio {
   user-select: none;
   display: inline-flex;
+  align-items: center;
   position: relative;
   cursor: pointer;
   font-size: rem(14);
