--- a/src/assets/scss/modules/date-picker.scss
+++ b/src/assets/scss/modules/date-picker.scss
@@ -207,12 +207,12 @@
   // flex: 1;
   text-align: center;
   font-size: rem(14);
-  min-height: 40px;
+  min-height: rem(40);
 }
 
 .datepicker--cell-day {
   width: 14.28571%;
-  min-height: 40px;
+  min-height: rem(40);
 }
 
 .datepicker--cells-months {
@@ -303,7 +303,6 @@
   box-sizing: content-box;
   font-size: rem(14);
   color: #4a4a4a;
-  max-width: 320px;
   width: 320px;
   position: absolute;
   left: -15000px;
@@ -314,6 +313,10 @@
   z-index: 100;
   transition: max-height $trFast ease;
   transform: translate(0px,-12px);
+
+  @media screen and (max-width: $phoneWidth) {
+    width: 300px;
+  }
   &_show {
     max-height: 450px;
     z-index: 101;
@@ -348,6 +351,7 @@
 .datepicker-inline {
   .datepicker {
     // border-color: #d7d7d7;
+    // width: 100%;
     box-shadow: none;
     position: static;
     left: auto;
