--- a/src/pug/includes/modules/rate.pug
+++ b/src/pug/includes/modules/rate.pug
@@ -1,27 +1,27 @@
-mixin rate()
+mixin rate(boolen)
 	.rate
 		label.rate__star-wrap
-			input.rate__rating(type="radio" name="example" value="1")
+			input.rate__rating(type="radio" name="example" value="1" disabled=boolen)
 			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
-			input.rate__rating(type="radio" name="example" value="2")
+			input.rate__rating(type="radio" name="example" value="2" disabled=boolen)
 			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
-			input.rate__rating(type="radio" name="example" value="3")
+			input.rate__rating(type="radio" name="example" value="3" disabled=boolen)
 			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
-			input.rate__rating(type="radio" name="example" value="4")
+			input.rate__rating(type="radio" name="example" value="4" disabled=boolen)
 			div
 				svg.rate__star
 					use(xlink:href="#star")
 		label.rate__star-wrap
-			input.rate__rating(type="radio" name="example" value="5")
+			input.rate__rating(type="radio" name="example" value="5" disabled=boolen)
 			div 
 				svg.rate__star
 					use(xlink:href="#star")
