--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -46,7 +46,7 @@ block content
 						br
 						+radio-button("radio buttons")
 						br
-						+toggle('toggle',"Получать спецпредложения","Получать спецпредложения")
+						+toggle("Получать спецпредложения","Получать спецпредложения")
 						br
 						span.title-element.title-element_margin-b like button
 						+like-dislike()
