--- a/src/pug/pages/cards-page.pug
+++ b/src/pug/pages/cards-page.pug
@@ -25,10 +25,10 @@ block content
 						.wrap-element.wrap-element_inline.wrap-element_margin-b-20
 							.wrap-element__item
 								span.title-element прибытие
-								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","input-wrapper__input_date-picker date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here input-wrapper__input_date-picker date-start-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 							.wrap-element__item
 								span.title-element выезд
-								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","input-wrapper__input_date-picker date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ"," input-wrapper__input_date-picker date-end-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 						.wrap-element.wrap-element_margin-b-30
 							+dropdown-guests("Гости","guests")
 						button.button.button_big Подобрать номер
@@ -47,10 +47,10 @@ block content
 						.wrap-element.wrap-element_inline.wrap-element_margin-b-20
 							.wrap-element__item
 								span.title-element прибытие
-								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","input-wrapper__input_date-picker date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here input-wrapper__input_date-picker date-start-2 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 							.wrap-element__item
 								span.title-element выезд
-								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","input-wrapper__input_date-picker date-dropdown-1 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
+								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ"," input-wrapper__input_date-picker date-end-2 dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 						.wrap-element.wrap-element_margin-b-20
 							+dropdown-guests("Гости","guests")
 						.price-calculator
