--- a/src/assets/scss/modules/wrap-element.scss
+++ b/src/assets/scss/modules/wrap-element.scss
@@ -1,5 +1,7 @@
 .wrap-element {
-
+	&_max-w-320 {
+		max-width: 320px;
+	}
 	&_border-b {
 		border-bottom: 1px solid $ds25;
 	}
@@ -15,7 +17,7 @@
 	}
 	&__item {
 		@media screen and (max-width: $phoneWidth) {
-			margin-right: 5px;
+			margin-right: 10px;
 			&:last-child {
 				margin-right: 0;
 			}
