--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -29,10 +29,10 @@ block content
 						+input("Date-1","","text", "ДД.ММ.ГГГГ","date-field-1","Date")
 						br
 						.wrap-element.wrap-element_inline.wrap-element_max-w-320
-							.wrap-item
+							.wrap-element__item
 								span.title-element date dropdown
 								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ","datepicker-here input-wrapper__input_date-picker date-dropdown-start dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
-							.wrap-item
+							.wrap-element__item
 								span.title-element date dropdown
 								+input("date dropdown","input-wrapper_w150 input-wrapper_icon-show","text", "ДД.ММ.ГГГГ"," input-wrapper__input_date-picker date-dropdown-end dropdown ","Date","icon-dropdown expand-more","#expand_more","true")
 						br
